# STARAlgorithm

./: CMakeLists.txt  Demo.cxx  README.md  vtk_visual.h
DataSetExamples/: Cells211.vtk  Cells235.vtk  Cells261.vtk  Cells289.vtk  Cells322.vtk  Cells355.vtk  Cells382.vtk  Cells404.vtk  times211.txt
src/: CCL_Algorithm.cuh  CCL_Algorithm_kernel.cuh  CMakeLists.txt  CellSearch.cu  CellSearch.h  DataStructure.h  GridConstruction.cuh  StarAlg_kernel.cuh  macro.h  makefile_lib
